Adding command to generate HTML slides.
Signed-off-by: Ulises Tirado Zatarain <utirado@gmail.com>

--- a/talks/template/Dockerfile
+++ b/talks/template/Dockerfile
@@ -7,10 +7,20 @@ COPY . .
 RUN mv beamer /opt/texlive/texdir/texmf-dist/tex/latex/beamer \
     && chmod -R 644 /opt/texlive/texdir/texmf-dist/tex/latex/beamer \
     && texhash
+
 RUN pandoc example.md -o example.pdf \
     --lua-filter algorithm.lua \
     --listings \
     --include-in-header=preamble.tex \
     --syntax-definition=algorithm.xml \
-    -t beamer
+    --to=beamer
+
+RUN pandoc example.md -o example.html \
+    --mathjax \
+    --standalone \
+    --css=algorists.css \
+    --listings \
+    --syntax-definition=algorithm.xml \
+    --to=slidy
+
 ENTRYPOINT [ "bash" ]
